[package]
name = "solarman-prometheus-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
solarman-tokio = { version = "0.1", path = "../solarman-tokio" }
tokio = { version = "1", features = ["rt", "macros", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1.8", features = ["http1", "server" ] }
anyhow = "1.0"

