[package]
name = "solarman-prometheus-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
solarman-tokio = { version = "0.1", path = "../solarman-tokio" }
tokio = { version = "1", features = ["rt", "macros", "fs", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
toml = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8"
