[package]
name = "solarman-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tokio-util = { workspace = true, features = ["codec"], optional = true }

[features]
default = ["codec"]
codec = ["tokio-util"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
